# youbetheteacher

Backend/: cookiedb.py  main.py  pyproject.toml  replit_zip_error_log.txt
Backend/.upm/: store.json
Frontend/: index.html  package-lock.json  package.json  replit_zip_error_log.txt  vite.config.js.timestamp-1676079325261.mjs
Frontend/.upm/: store.json
Frontend/public/: CardStyle.jsx  Input.jsx  ListView.jsx
Frontend/src/: App.css  App.jsx  Course.jsx  Home.jsx  index.jsx
