[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
openai = "^0.26.5"
gensim = "^4.3.0"
nltk = "^3.8.1"
spacy = "^3.5.0"
Flask-Cors = "^3.0.10"
Redberry = "^0.0.7"
mongoengine = "^0.26.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"